[package]
name = "rustygoblin"
version = "0.1.0"
authors = ["Nicholas LaRoche <nicholas.laroche@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
getopts = "0.2"
pnet = "0.22.0"
rand = "0.6.5"
zmq = "0.9.0"
md5 = "0.6.1"
lazy_static = "1.3.0"
slog = "2.4.1"
slog-term = "2.4.0"
slog-async = "2.3.0"
slog-json = "2.3.0"
pcap-file = "0.10.0"
serde = { version = "1.0.90", features = ["derive"] }
serde_json = "1.0.39"
logos = { version = "0.9.7", features = [] }
logos-derive = { version = "0.9.7", features = [] }
